# cqg

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  config.json
src/: aggregator.cpp  aggregator.hpp  app_runner.cpp  app_runner.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  main.cpp  trade.cpp  trade.hpp  trade_queue.cpp  trade_queue.hpp  websocket_client.cpp  websocket_client.hpp
tests/: test_aggregator.cpp  test_app_runner.cpp  test_config.cpp  test_trade.cpp  test_trade_queue.cpp  test_websocket_client.cpp
